# prog4-project

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  emscripten.yml
Data/anim/: enemy.json  fygar_attack.json  ping.json  player.json  player_attack.json
Data/scenes/: gm_coop.xml  gm_solo.xml  gm_vs.xml  level1_coop.xml  level1_solo.xml  level1_vs.xml  level2_coop.xml  level2_solo.xml  level2_vs.xml  scene0.xml
Game/: CMakeLists.txt
Game/src/: AttackComponent.cpp  AttackComponent.h  DirHelpers.h  Enemy.cpp  Enemy.h  FPSCounter.cpp  FPSCounter.h  GameCommands.h  GameManager.cpp  GameManager.h  HealthComponent.cpp  HealthComponent.h  LivesDisplayComponent.cpp  LivesDisplayComponent.h  Main.cpp  MainMenu.cpp  MainMenu.h  Player.cpp  Player.h  PlayerUI.cpp  PlayerUI.h  PointsDisplayComponent.cpp  PointsDisplayComponent.h  RotatorComponent.cpp  RotatorComponent.h  ScoreComponent.cpp  ScoreComponent.h  SoundTestComponent.cpp  SoundTestComponent.h  SteamAchievementObserver.cpp  SteamAchievementObserver.h  ThrashTheCacheDemo.cpp  ThrashTheCacheDemo.h  TunnelComponent.cpp  TunnelComponent.h
Minigin/: CMakeLists.txt  Event.h  FPSCounter.cpp  FPSCounter.h  GameObject.cpp  GameObject.h  Gamepad.cpp  Gamepad.h  HealthComponent.h  InputManager.cpp  InputManager.h  Main.cpp  Minigin.cpp  Minigin.h  MovementComponent.cpp  MovementComponent.h  PointsDisplayComponent.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ScoreComponent.h  SteamAchievementObserver.cpp  SteamAchievementObserver.h  TextComponent.cpp  TextComponent.h  Texture2D.cpp  Texture2D.h  TextureComponent.cpp  TextureComponent.h  ThrashTheCacheDemo.cpp  ThrashTheCacheDemo.h
Minigin/include/: Array2d.h  BoxCollider.h  DebugUtils.h  EngineCtx.h  Event.h  EventManager.h  FPSCounter.h  Font.h  GameObject.h  Graph.h  GridCollider.h  GridComponent.h  GridRenderer.h  ICollider.h  ICollisionReceiver.h  IObserver.h  IRenderable.h  InputCommand.h  InputManager.h  Minigin.h  Physics.h  Renderer.h  ResourceManager.h  Scene.h  SceneManager.h  ServiceLocator.h  Singleton.h  SoundSystem.h  SoundSystemSDL.h  SpriteComponent.h  Subject.h  TextComponent.h  Texture2D.h  TextureComponent.h  ThrashTheCacheDemo.h
Minigin/src/: BoxCollider.cpp  EventManager.cpp  Font.cpp  GameObject.cpp  Graph.cpp  GridCollider.cpp  GridComponent.cpp  GridRenderer.cpp  HealthComponent.cpp  InputManager.cpp  LivesDisplayComponent.cpp  Minigin.cpp  Physics.cpp  PointsDisplayComponent.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  ScoreComponent.cpp  ServiceLocator.cpp  SoundSystemSDL.cpp  SpriteComponent.cpp  TextComponent.cpp  Texture2D.cpp  TextureComponent.cpp  ThrashTheCacheDemo.cpp
web/: index.html
